--- a/packages/ui/src/variables.css
+++ b/packages/ui/src/variables.css
@@ -30,7 +30,7 @@
     0 25.600000381469727px 57.599998474121094px 0 #00000038; /* Primarily used for dialogs */
   --surface-color-primary-button-default: #013366;
   --surface-color-primary-button-hover: #1e5189;
-  --surface-color-primary-button-disabled: #edebe9;
+  --surface-color-primary-button-disabled: #9f9d9c;
   --surface-color-primary-danger-button-default: #ce3e39;
   --surface-color-primary-danger-button-hover: #a2312d;
   --surface-color-primary-danger-button-disabled: #edebe9;
@@ -69,6 +69,7 @@
   --icons-color-primary: #2d2d2d;
   --icons-color-secondary: #474543;
   --icons-color-disabled: #9f9d9c;
+  --icons-color-disabled-accessible: #edebe9;
   --icons-color-link: #255a90;
   --icons-color-info: #053662;
   --icons-color-danger: #ce3e39;
